force-app/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>A storefront review provided by a customer.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>