force-app/main/default/objects/Review__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the review to the customer who provided the feedback. This field ensures traceability of reviews to individual customers.</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Review</relationshipName>
    <type>Lookup</type>
</CustomField>