force-app/main/default/objects/Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>The numerical rating provided by the customer, typically ranging from 1 (poor) to 5 (excellent).</description>
    <inlineHelpText>1 (poor) to 5 (excellent)</inlineHelpText>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>