force-app/main/default/objects/Review__c/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <description>Associates the review with a specific storefront, allowing insights at the store level.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>